--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,13 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <application
         android:name="it.fox.geofencepoc.GeofenceApplication"
         android:allowBackup="true"
@@ -33,6 +35,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:description="@string/location_proximity_srv"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:exported="false"
+            android:name="it.fox.geofencepoc.services.LocationProximityService"/>
+
+        <receiver android:name="it.fox.geofencepoc.broadcastreceivers.LocationProximityStarter" android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="it.fox.geofencepoc.APP_STARTED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
